# sandboxcraft

./: .gitignore  CMakeLists.txt  README  generate-vs.bat
articles/cubemarching/: Polygonising a scalar field (Marching Cubes).html
articles/cubemarching/Polygonising a scalar field (Marching Cubes)_files/: pdbstyle.css
articles/cubemarching/examples/: drawing.c  glvolume.c  glvolume.h  menus.c  usage.c
articles/frustum culling/: Frustum_Culling.shtml
articles/frustum culling/Frustum_Culling_files/: ads.html  show_ads.js
articles/frustum culling/Frustum_Culling_files/ads_data/: graphics.js
articles/frustum culling/examples/: frustum.c  frustum.cpp  frustum.h  viewtest.h
doc/: concept.rst  conf.py  index.rst  make.bat
include/: _sc_list.h  _sc_list_post.inc  _sc_list_pre.inc  sc_alloc.h  sc_array_texture.h  sc_arraytex.h  sc_atlas.h  sc_blocks.h  sc_boot.h  sc_camera.h  sc_color.h  sc_config.h  sc_debug.h  sc_engine.h  sc_error.h  sc_frustum.h  sc_game.h  sc_imaging.h  sc_inifile.h  sc_lighting.h  sc_list.h  sc_mat3.h  sc_mat4.h  sc_math.h  sc_path.h  sc_perlin.h  sc_pputils.h  sc_primitives.h  sc_quaternion.h  sc_ray.h  sc_rnd.h  sc_scenemgr.h  sc_shaders.h  sc_shading.h  sc_strbuf.h  sc_stringutils.h  sc_strmap.h  sc_test.h  sc_texture.h  sc_threads.h  (+7 more)
osxlauncher/: launcher.h  launcher.m
resources/shaders/: common.shader  grass.program  lighting.shader  loading.frag  loading.shader  loading.vert  simple.frag  simple.shader  simple.vert  utils.shader
src/: _list_impl.inc  alloc.c  arraytex.c  atlas.c  blocks.c  camera.c  color.c  config.c  debug.c  engine.c  error.c  frustum.c  game.c  imaging.c  inifile.c  lighting.c  list.c  main.c  mat3.c  mat4.c  math.c  path.c  perlin.c  primitives.c  quaternion.c  ray.c  rnd.c  scenemgr.c  shaders.c  shading.c  strbuf.c  strmap.c  test.c  texture.c  threads.c  utils.c  vbo.c  vec2.c  vec3.c  vec4.c  (+2 more)
tests/: CMakeLists.txt  runtests.py  runtests.sh  test_alloc.c  test_inifile.c  test_list.c  test_mat4.c  test_path.c  test_strbuf.c  test_strmap.c  test_vec3.c
